@@ -1,6 +1,7 @@
 package com.igriss.ListIn.config.Images;
 
-import com.igriss.ListIn.config.Images.compressor.FileCompressor;
+import com.igriss.ListIn.chunker_client.ChunkerClient;
+import com.igriss.ListIn.chunker_client.FileData;
 import com.igriss.ListIn.exceptions.FailedToUploadFileException;
 import jakarta.annotation.PreDestroy;
 import lombok.RequiredArgsConstructor;
@@ -21,16 +22,19 @@ import java.io.IOException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class S3Service {
+
+    private final ChunkerClient chunkerClient;
 
     private final S3Client s3Client;
 
@@ -43,11 +47,17 @@ public class S3Service {
     @Value("${cloud.aws.s3.cache-control}")
     private String cached;
 
-    private final ExecutorService executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors()); // Adjust thread pool size as needed
+    private final ExecutorService executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
 
     //todo -> handle the case where S3 is out of memory
     public List<String> uploadFile(List<MultipartFile> files) {
         log.info("Starting sequential stream");
+
+        return /*isVideoFile(files.get(0)) ? uploadVideo(files.get(0)) : */uploadImage(files);
+
+    }
+
+    private List<String> uploadImage(List<MultipartFile> files) {
         return files.stream()
                 .map(file -> {
                     log.info("Generating URL of file {}", file.getOriginalFilename());
@@ -55,21 +65,18 @@ public class S3Service {
                     String ext = FilenameUtils.getExtension(file.getOriginalFilename());
                     String fileName = fileId + "." + ext;
                     String fileUrl = String.format("%s/%s", bucketLink, fileName);
-                    MultipartFile multipartFile;
+
                     try {
                         byte[] fileData = file.getBytes();
                         String contentType = file.getContentType();
 
-                        multipartFile = CompressedMultipartFile.builder()
+                        FileData multipartFile = FileData.builder()
                                 .name(fileName)
                                 .originalFilename(file.getOriginalFilename())
                                 .content(fileData)
                                 .contentType(contentType)
                                 .build();
 
-                        log.info("File URL created {}", fileUrl);
-
-                        // Submit the async task to the executor
                         submitAsyncTask(fileName, multipartFile);
 
                     } catch (IOException e) {
@@ -77,8 +84,16 @@ public class S3Service {
                     }
 
                     return fileUrl;
-                }).collect(Collectors.toList());
+
+                }).toList();
     }
+
+//    private List<String> uploadVideo(MultipartFile f) {
+//        log.info("Video file sending to chunker service");
+//        String chunkerResponse = chunkerClient.sendFileToChunker(f).replace("\"","");
+//
+//        return Collections.singletonList(chunkerResponse);
+//    }
 
     // Make sure to shut down the executor service properly to avoid memory leaks
     @PreDestroy
@@ -135,15 +150,11 @@ public class S3Service {
     private void submitAsyncTask(String fileName, MultipartFile file) {
         executorService.submit(() -> {
             try {
-                log.info("Compressing file {}", file.getOriginalFilename());
-                MultipartFile compressedFile = FileCompressor.compressFile(file);
-                log.info("File compressed {}", compressedFile.getOriginalFilename());
-
-                log.info("Uploading file {}", compressedFile.getOriginalFilename());
-                saveFiles(fileName, compressedFile);
-                log.info("Uploaded file {}", compressedFile.getOriginalFilename());
+                log.info("Uploading file {}", file.getOriginalFilename());
+                saveFiles(fileName, file);
+                log.info("Uploaded file {}", file.getOriginalFilename());
             } catch (Exception e) {
-                log.error("Error processing file {}: {}", file.getOriginalFilename(), e.getMessage());
+                log.error("Error processing file {}", file.getOriginalFilename() + e);
             }
         });
     }
@@ -165,4 +176,10 @@ public class S3Service {
         }
     }
 
+    private boolean isVideoFile(MultipartFile file) {
+        return switch (Objects.requireNonNull(FilenameUtils.getExtension(file.getOriginalFilename())).toLowerCase()) {
+            case "mkv", "mp4", "mov" -> true;
+            default -> false;
+        };
+    }
 }
